--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -35,7 +35,7 @@
                     </tbody>
                 </table>
             {% else %}
-                <div class="alert alert-info">Aucune utilisateur n'a été enregistré</div>
+                {% include 'partial/_no_element.html.twig' %}
             {% endif %}
         </div>
         <!-- /.card-body -->
