--- a/app/Resources/views/activity/index.html.twig
+++ b/app/Resources/views/activity/index.html.twig
@@ -61,7 +61,7 @@
                     </tbody>
                 </table>
             {% else %}
-                <div class="alert alert-info">Aucune activité n'a été trouvée avec ces critères</div>
+                {% include 'patial/_no_element.html.twig' %}
             {% endif %}
         </div>
         <!-- /.card-body -->
