--- a/app/Resources/views/activity_type/index.html.twig
+++ b/app/Resources/views/activity_type/index.html.twig
@@ -62,7 +62,7 @@
                     </tbody>
                 </table>
             {% else %}
-                <div class="alert alert-info">Aucun type d'activité ne correspond à ces critères</div>
+                {% include 'partial/_no_element.html.twig' %}
             {% endif %}
         </div>
         <!-- /.card-body -->
