--- a/app/Resources/views/campus/index.html.twig
+++ b/app/Resources/views/campus/index.html.twig
@@ -57,7 +57,7 @@
                     </tbody>
                 </table>
             {% else %}
-                <div class="alert alert-info">Aucun campus n'a été trouvé avec ces critères</div>
+                {% include 'partial/_no_element.html.twig' %}
             {% endif %}
         </div>
         <!-- /.card-body -->
