--- a/app/Resources/views/equipment/index.html.twig
+++ b/app/Resources/views/equipment/index.html.twig
@@ -53,7 +53,7 @@
                     </tbody>
                 </table>
             {% else %}
-                <div class="alert alert-info">Aucun équipement ne correspond à ces critères</div>
+                {% include 'partial/_no_element.html.twig' %}
             {% endif %}
         </div>
         <!-- /.card-body -->
