--- a/app/Resources/views/structure/index.html.twig
+++ b/app/Resources/views/structure/index.html.twig
@@ -58,7 +58,7 @@
                     </tbody>
                 </table>
             {% else %}
-                <div class="alert alert-info">Aucune structure trouvée pour ces critères</div>
+                {% include 'partial/_no_element.html.twig' %}
             {% endif %}
         </div>
         <!-- /.card-body -->
