--- a/app/Resources/views/year/index.html.twig
+++ b/app/Resources/views/year/index.html.twig
@@ -38,7 +38,7 @@
                     </tbody>
                 </table>
             {% else %}
-                <div class="alert alert-info">Aucune année n'a été enregistrée</div>
+                {% include 'partial/_no_element.html.twig' %}
             {% endif %}
         </div>
         <!-- /.card-body -->
