--- a/app/Resources/views/course_info/presentation/form/remove_teacher.html.twig
+++ b/app/Resources/views/course_info/presentation/form/remove_teacher.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_presentation_remove_teacher', {'id': courseInfo.id, 'teacherId': form.vars.data.id}), 'data-card': 'card-teacher' }}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.teacher.delete', {'id': form.vars.data.id}), 'data-card': 'card-teacher' }}) }}
 {{ form_errors(form) }}
 <h5>{{ 'app.presentation.form.teacher.delete' | trans({'%lastname%': form.vars.data.lastname, '%firstname%': form.vars.data.firstname}) }}</h5>
 <div class="d-flex justify-content-center">
