--- a/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
@@ -35,10 +35,10 @@
 </div>
 
 <div class="mt-2">
-    <button type="submit" class="submit-button btn btn-primary submit rounded" data-url="{{ path('course_presentation_teaching_mode_view', {'id': courseInfo.id}) }}">
+    <button type="submit" class="submit-button btn btn-primary submit rounded" data-url="{{ path('app.course_info.presentation.teaching_mode', {'id': courseInfo.id}) }}">
         {{ 'app.general.button.save' | trans }}
     </button>
-    <button type="button" class="cancel-button btn btn-secondary rounded" data-url="{{ path('course_presentation_teaching_mode_view', {'id': courseInfo.id}) }}">
+    <button type="button" class="cancel-button btn btn-secondary rounded" data-url="{{ path('app.course_info.presentation.teaching_mode', {'id': courseInfo.id}) }}">
         {{ 'app.general.button.cancel' | trans }}
     </button>
 </div>
