--- a/app/Resources/views/language/new.html.twig
+++ b/app/Resources/views/language/new.html.twig
@@ -8,6 +8,7 @@
         {{ form_start(form) }}
         <div class="card-body">
             {{ form_row(form.label) }}
+            {{ form_row(form.locale) }}
         </div>
         <!-- /.card-body -->
 
