--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -75,7 +75,7 @@
                 <li class="nav-item menu-tab has-treeview">
                     <a class="nav-link"
                        id="menu-resource"
-                       href="{{ path('course_equipment_index', { 'id': courseInfo.id }) }}">
+                       href="{{ path('app.course_info.resource_equipment.index', { 'id': courseInfo.id }) }}">
                         <i class="fas fa-tools"></i>
                         <p>Matériel et ressources</p>
                     </a>
