--- a/app/Resources/views/course_info/equipment/equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/equipment.html.twig
@@ -3,7 +3,7 @@
 {% block subContent %}
 
     <div id="card-equipment" class="card my-2 shadow card-syllabus"
-         data-view-url="{{ path('course_equipment_equipment_view', {'id': courseInfo.id }) }}"
+         data-view-url="{{ path('app.course_info.resource_equipment.equipments', {'id': courseInfo.id }) }}"
     >
         <div class="card-header">
             <div class="d-flex justify-content-between">
@@ -15,8 +15,8 @@
     </div>
 
     <div class="card my-2 shadow card-syllabus"
-         data-view-url="{{ path('course_equipment_resource_view', {'id': courseInfo.id }) }}"
-         data-form-url="{{ path('course_equipment_resource_form', {'id': courseInfo.id }) }}"
+         data-view-url="{{ path('app.course_info.resource_equipment.resources', {'id': courseInfo.id }) }}"
+         data-form-url="{{ path('app.course_info.resource_equipment.resource.edit', {'id': courseInfo.id }) }}"
     >
         <div class="card-header">
             <div class="d-flex justify-content-between">
