--- a/app/Resources/views/course_info/equipment/form/equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/form/equipment.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_equipment_equipment_add', {'id': form.vars.data.courseInfo.id, 'idEquipment': form.vars.data.equipment.id}), 'data-card': 'card-equipment'}}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.resource_equipment.equipment.add', {'id': form.vars.data.courseInfo.id, 'idEquipment': form.vars.data.equipment.id}), 'data-card': 'card-equipment'}}) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
     <div class="col">
