--- a/app/Resources/views/course_info/equipment/form/remove_resource_equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/form/remove_resource_equipment.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_equipment_equipment_remove', {'id': courseInfo.id, 'idResourceEquipment': form.vars.data.id}), 'data-card': 'card-equipment' }}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.equipment.delete', {'id': form.vars.data.id}), 'data-card': 'card-equipment' }}) }}
 {{ form_errors(form) }}
 <h5>Êtes-vous sûr(e) de vouloir supprimer le matériel "{{ form.vars.data.equipment.label }}" ?</h5>
 <div class="d-flex justify-content-center">
