--- a/app/Resources/views/course_info/activities/form/add_activity.html.twig
+++ b/app/Resources/views/course_info/activities/form/add_activity.html.twig
@@ -7,7 +7,7 @@
     </small>
 </div>
 <div>
-    {{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_activities_add_activity', {'sectionId': courseSection.id, 'activityId': activity.id, 'activityTypeId': form.vars.value.activityType.id })}}) }}
+    {{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.section.activity.add', {'id': courseSection.id, 'activityId': activity.id, 'activityTypeId': form.vars.value.activityType.id })}}) }}
     {{ form_errors(form) }}
     {{ form_row(form.description) }}
     {{ form_row(form.activityType, {label_attr: {class: 'radio-custom'} }) }}
