--- a/app/Resources/views/course_info/presentation/presentation.html.twig
+++ b/app/Resources/views/course_info/presentation/presentation.html.twig
@@ -26,7 +26,7 @@
                 <h3>{{ 'app.presentation.view.teachers.label' | trans }}</h3>
                 <button type="button" class="btn btn-primary modal-action rounded"
                         data-action-title="{{ 'app.presentation.view.teachers.add_teacher' | trans }}"
-                        data-action-url="{{ path('app.course_info.presentation.teachers.edit', {'id': courseInfo.id }) }}">
+                        data-action-url="{{ path('app.course_info.presentation.teachers.add', {'id': courseInfo.id }) }}">
                     {{ 'app.presentation.view.teachers.add_teacher' | trans }}
                 </button>
             </div>
