--- a/app/Resources/views/course_info/activities/activities.html.twig
+++ b/app/Resources/views/course_info/activities/activities.html.twig
@@ -47,7 +47,7 @@
                                                     {% if activity.activityTypes is not empty and activityType in activity.activityTypes %}
                                                         <a class="m-auto modal-action"
                                                            data-action-title="{{ 'app.activities.view.carousel.add_activity' | trans }}"
-                                                           data-action-url="{{ path("course_activities_add_activity", {'sectionId': activeSection.id, 'activityId': activity.id, 'activityTypeId': activityType.id}) }}">
+                                                           data-action-url="{{ path("app.course_info.section.activity.add", {'id': activeSection.id, 'activityId': activity.id, 'activityTypeId': activityType.id}) }}">
                                                             <div class="activity-carousel-item text-center d-flex shadow">
                                                                 <div class="m-auto">{{ activity.label }}</div>
                                                             </div>
