--- a/app/Resources/views/course_info/activities/form/remove_section.html.twig
+++ b/app/Resources/views/course_info/activities/form/remove_section.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_activities_remove_section', {'id': courseInfo.id, 'sectionId': form.vars.data.id})}}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.section.delete', {'id': form.vars.data.id})}}) }}
 {{ form_errors(form) }}
 <h5>{{ 'app.activities.form.section.delete' | trans({'%title%': form.vars.data.title}) }}</h5>
 <div class="d-flex justify-content-center">
