--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -51,7 +51,7 @@
                 <li class="nav-item has-treeview">
                     <a class="nav-link menu-tab"
                        id="menu-activities"
-                       href="{{ path('course_activities', { 'id': courseInfo.id }) }}">
+                       href="{{ path('app.course_info.activities.index', { 'id': courseInfo.id }) }}">
                         <i class="fas fa-list-alt"></i>
                         <p>Contenu et activités</p>
                     </a>
