--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -67,7 +67,7 @@
                 <li class="nav-item has-treeview">
                     <a class="nav-link menu-tab"
                        id="menu-evaluation"
-                       href="{{ path('course_evaluation_specifications_index', { 'id': courseInfo.id }) }}">
+                       href="{{ path('app.course_info.evaluation.index', { 'id': courseInfo.id }) }}">
                         <i class="fas fa-medal"></i>
                         <p>Modalités d'évaluation</p>
                     </a>
