--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -311,7 +311,7 @@ li.active{
     left: 40px;
 }
 
-#list-activities {
+#activities-list {
     min-height: 300px;
     max-height: calc(100vh - 310px);
     overflow: auto;
