--- a/app/Resources/views/course_info/activities/view/activity_content.html.twig
+++ b/app/Resources/views/course_info/activities/view/activity_content.html.twig
@@ -18,8 +18,8 @@
                             </div>
                             {% if sectionActivity.evaluable %}
                                 <div class="mt-1">
-                                    {% if sectionActivity.evaluationPeer %}<span class="badge badge-primary rounded mr-2">Evalué par les pairs</span>{% endif %}
-                                    {% if sectionActivity.evaluationTeacher %}<span class="badge badge-primary rounded">Evalué par les enseignants</span>{% endif %}
+                                    {% if sectionActivity.evaluationPeer %}<span class="badge badge-primary rounded mr-2">{{ 'app.activities.view.activity.evaluated_peers' | trans }}</span>{% endif %}
+                                    {% if sectionActivity.evaluationTeacher %}<span class="badge badge-primary rounded">{{ 'app.activities.view.activity.evaluated_taechers' | trans }}</span>{% endif %}
                                 </div>
                             {% endif %}
                         </div>
