--- a/app/Resources/views/user/_form.html.twig
+++ b/app/Resources/views/user/_form.html.twig
@@ -26,6 +26,6 @@
     <button type="submit" class="btn btn-primary">{{ buttonLabel|default('Modifier') }}</button>
     {% set user = form.vars.data %}
     {% if user.id %}
-        <a type="submit" class="btn btn-primary" href="{{ path('app_admin_user_send_password_token', {'id' : user.id}) }}">Envoyer un mail de réinitialisation de mot de passe</a>
+        <a type="submit" class="btn btn-primary" href="{{ path('app.admin.user.send_password_token', {'id' : user.id}) }}">Envoyer un mail de réinitialisation de mot de passe</a>
     {% endif %}
 {{ form_end(form) }}
