--- a/app/Resources/views/course_info/dashboard/form/ask_advice.html.twig
+++ b/app/Resources/views/course_info/dashboard/form/ask_advice.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_dashboard_askAdvice',
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.dashboard.askAdvice',
     {'id': courseInfo.id })}}) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
