--- a/app/Resources/views/default/homepage.html.twig
+++ b/app/Resources/views/default/homepage.html.twig
@@ -38,7 +38,7 @@
                         {% for courseInfo in course %}
                             <tr>
                                 <td style="width: 50%">
-                                    <a href="{{ path('course_dashboard_index', { 'id' : courseInfo.id }) }}">{{ courseInfo.title }}</a>
+                                    <a href="{{ path('app.course_info.dashboard.index', { 'id' : courseInfo.id }) }}">{{ courseInfo.title }}</a>
                                 </td>
                                 <td style="width: 25%">
                                     {{ courseInfo.course.type }}
